Some links change gitignore is added and vit logo added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body bgcolor="tan">
     <center>
-        <a href="https://sourceforge.net/projects/pollingsystem/"><img src="images/logo" alt="site logo"></a>
+        <a href="https://sourceforge.net/projects/pollingsystem/"><img src="images/vitlogo.png" width="150px" alt="site logo"></a>
     </center><br>
     <center><b><font color = "brown" size="6">Simple PHP Polling System</font></b></center><br><br>
     <div id="page">
@@ -45,12 +45,11 @@
                 </tr>
             </table>
             <center>
-                <br>Not yet registered? <a href="registeracc.php"><b>Register Here</b></a>
-                <br>Return to <a href="http://www.anu.ac.ke"><b>ANU Home Page</b></a>
+                <br>Not yet registered? <a href="registeracc.php"><b>Register Here</b></a><br><br> For Admin Login <b><a href="admin/index.php">Click Here</a></b>
             </center>
         </div>
         <div id="footer">
-            <div class="bottom_addr">&copy; 2012 Simple PHP Polling System. All Rights Reserved</div>
+            <div class="bottom_addr">&copy; 2020 Polling System. All Rights Reserved</div>
         </div>
     </div>
 </body>
