Register page links updated and validation added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <center>
         <a href="https://sourceforge.net/projects/pollingsystem/"><img src="images/vitlogo.png" width="150px" alt="site logo"></a>
     </center><br>
-    <center><b><font color = "brown" size="6">Simple PHP Polling System</font></b></center><br><br>
+    <center><b style="color:brown; font-size:30px;">Online Polling System</b></center><br>
     <div id="page">
         <div id="header">
             <h1>Student Login </h1>
