Formatted all code and remove html 4 decleariation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </script>
 </head>
 
-<body bgcolor="tan">
+<body>
     <center>
         <a href="https://sourceforge.net/projects/pollingsystem/"><img src="images/vitlogo.png" width="150px" alt="site logo"></a>
     </center><br>
@@ -45,7 +45,7 @@
                 </tr>
             </table>
             <center>
-                <br>Not yet registered? <a href="registeracc.php"><b>Register Here</b></a><br><br> For Admin Login <b><a href="admin/index.php">Click Here</a></b>
+                <br>Not yet registered? <a href="registeracc.php"><b>Register Here</b></a><br><br> For Admin Login <b><a href="admin/login.html">Click Here</a></b>
             </center>
         </div>
         <div id="footer">
