--- a/admin/login.html
+++ b/admin/login.html
@@ -1,48 +1,81 @@
 <html>
-
-<head>
+  <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link href="css/admin_styles.css" rel="stylesheet" type="text/css" />
     <script language="JavaScript" src="js/admin.js"></script>
-</head>
+  </head>
 
-<body>
-    <center><b><font color = "brown" size="6">Online Polling System</font></b></center><br><br>
+  <body>
+    <center>
+      <b><font color="black" size="6">VI-Voting Platform</font></b>
+    </center>
+    <br /><br />
     <div id="page">
-        <div id="header">
-            <h1>Administrator Login </h1>
-            <p align="center">&nbsp;</p>
-        </div>
-        <div id="container">
-            <table width="300" align="center" cellpadding="0" cellspacing="1" bgcolor="#FFFFFF">
-                <tr>
-                    <form name="form1" method="post" action="checklogin.php" onsubmit="return loginValidate(this)">
-                        <td>
-                            <table width="100%" cellpadding="3" cellspacing="1">
-                                <tr>
-                                    <td width="78">Username/Email</td>
-                                    <td width="6">:</td>
-                                    <td width="294"><input name="myusername" type="text" id="myusername"></td>
-                                </tr>
-                                <tr>
-                                    <td>Password</td>
-                                    <td>:</td>
-                                    <td><input name="mypassword" type="password" id="mypassword"></td>
-                                </tr>
-                                <tr>
-                                    <td>&nbsp;</td>
-                                    <td>&nbsp;</td>
-                                    <td><input type="submit" name="Submit" value="Login"></td>
-                                </tr>
-                            </table>
-                        </td>
-                    </form>
-                </tr>
-            </table>
-        </div>
-        <div id="footer">
-            <div class="bottom_addr">&copy; 2012 Simple PHP Polling System. All Rights Reserved</div>
-        </div>
+      <div id="header" style="font-size:20px;color:white">
+        <h1 style="padding: 20px;">Administrator Login</h1>
+        <p align="center">&nbsp;</p>
+      </div>
+      <div id="container">
+        <table
+          width="90%"
+          align="center"
+          cellpadding="0"
+          cellspacing="1"
+          bgcolor="#FFFFFF"
+        >
+          <tr>
+            <form
+              name="form1"
+              method="post"
+              action="checklogin.php"
+              onsubmit="return loginValidate(this)"
+            >
+              <td>
+                <table width="100%" cellpadding="3" cellspacing="1">
+                  <tr style="text-align: center;width: 100% ">
+                    Username/Email
+                  </tr>
+                  <br />
+                  <tr>
+                    <input
+                      class="effect-2"
+                      name="myusername"
+                      type="text"
+                      id="myusername"
+                    />
+                  </tr>
+                  <br />
+                  <br />
+                  <tr>
+                    Password
+                  </tr>
+                  <br />
+                  <tr>
+                    <input
+                      class="effect-2"
+                      name="mypassword"
+                      type="password"
+                      id="mypassword"
+                    />
+                  </tr>
+                  <br />
+                  <tr>
+                    <input
+                      class="butn"
+                      type="submit"
+                      name="Submit"
+                      value="Login"
+                    />
+                  </tr>
+                </table>
+              </td>
+            </form>
+          </tr>
+        </table>
+      </div>
+      <div id="footer">
+        <!---->
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
