--- a/index.html
+++ b/index.html
@@ -1,55 +1,71 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link href="css/user_styles.css" rel="stylesheet" type="text/css" />
-    <script language="JavaScript" src="js/user.js">
-    </script>
+    <script language="JavaScript" src="js/user.js"></script>
 </head>
 
 <body>
     <center>
-        <a href="https://sourceforge.net/projects/pollingsystem/"><img src="images/vitlogo.png" width="150px" alt="site logo"></a>
-    </center><br>
-    <center><b style="color:brown; font-size:30px;">Online Polling System</b></center><br>
+        <!-- <a href="https://www.vit.edu"><img src="images/vitlogo.png" width="40px" alt="site logo" /></a> -->
+        <br>
+    </center>
+    <center>
+        <br><img src="images/graphic.jpg" class="" width="250" /><br>
+
+        <b>
+        <font size="6" style="font-size: 46px; color: black; font-family: Helvetica, sans-serif">
+          VI-Voting Platform
+        </font>
+      </b>
+    </center>
+    <br>
     <div id="page">
-        <div id="header">
-            <h1>Student Login </h1>
+        <div id="header" style="font-size:20px;color:white">
+            <h1 style="padding: 20px;">Student Login</h1>
             <div class="news">
-                <marquee>New polls are up and running. But they will not be up forever! Just Login and then go to Current Polls to vote for your favourate candidates. </marquee>
+                <!----->
             </div>
         </div>
         <div id="container">
-            <table width="300" border="0" align="center" cellpadding="0" cellspacing="1" bgcolor="#FFFFFF">
-                <tr>
+            <table width="90%" border="0" align="center" cellpadding="0" cellspacing="1" bgcolor="#FFFFFF">
+                <tr bgcolor="white">
                     <form name="form1" method="post" action="checklogin.php" onsubmit="return loginValidate(this)">
-                        <td>
-                            <table width="100%" border="0" cellpadding="3" cellspacing="1" bgcolor="tan">
-                                <tr>
-                                    <td width="78">Username/Email</td>
-                                    <td width="6">:</td>
-                                    <td width="294"><input name="myusername" type="text" id="myusername"></td>
+                        <td style="text-align: center; ">
+                            <table width="100%" border="0" cellpadding="3" cellspacing="1" bgcolor="white" style="text-align: center; ">
+                                <tr style="text-align: center;width: 100% ">
+                                    Username/Email
                                 </tr>
+                                <br />
                                 <tr>
-                                    <td>Password</td>
-                                    <td>:</td>
-                                    <td><input name="mypassword" type="password" id="mypassword"></td>
+                                    <input class="effect-2" name="myusername" type="text" id="myusername" />
                                 </tr>
+                                <br />
+                                <br />
                                 <tr>
-                                    <td>&nbsp;</td>
-                                    <td>&nbsp;</td>
-                                    <td><input type="submit" name="Submit" value="Login"></td>
+                                    Password
+                                </tr>
+                                <br />
+                                <tr>
+                                    <input class="effect-2" name="mypassword" type="password" id="mypassword" />
+                                </tr>
+                                <br />
+                                <tr>
+                                    <input class="butn" type="submit" name="Submit" value="Login" />
                                 </tr>
                             </table>
                         </td>
                     </form>
                 </tr>
             </table>
+
             <center>
-                <br>Not yet registered? <a href="registeracc.php"><b>Register Here</b></a><br><br> For Admin Login <b><a href="admin/login.html">Click Here</a></b>
+                <br /> Not yet registered?<a href="registeracc.php"><b>Register Here</b></a><br><br> Admin Login <a href="admin/login.html">Click Here</a>
             </center>
         </div>
         <div id="footer">
-            <div class="bottom_addr">&copy; 2020 Polling System. All Rights Reserved</div>
+            <!---->
         </div>
     </div>
 </body>
